[workspace]
members = [
    "crates/rnote-compose",
    "crates/rnote-engine",
    "crates/rnote-cli",
    "crates/rnote-ui",
]
resolver = "2"

[workspace.package]
authors = ["The Rnote Authors"]
edition = "2021"
homepage = "https://rnote.flxzt.net"
license = "GPL-3.0-or-later"
repository = "https://github.com/flxzt/rnote"
rust-version = "1.74"
version = "0.11.0"

[workspace.dependencies]
rnote-compose = { version = "0.11.0", path = "crates/rnote-compose" }
rnote-engine = { version = "0.11.0", path = "crates/rnote-engine" }

adw = { version = "0.6.0", package = "libadwaita", features = ["v1_5"] }
anyhow = "1.0"
approx = "0.5.1"
async-fs = "2.1"
atty = "0.2.14"
base64 = "0.22.1"
bincode = "1.3"
bitcode = { version = "0.6", features = ["serde"] }
cairo-rs = { version = "0.19.4", features = ["v1_18", "png", "svg", "pdf"] }
chrono = "0.4.38"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11.0"
flate2 = "1.0"
fs_extra = "1.3"
futures = "0.3.30"
geo = "0.28.0"
gettext-rs = { version = "0.7.0", features = ["gettext-system"] }
gio = "0.19.5"
glib = "0.19.7"
glib-build-tools = "0.19.0"
gtk4 = { version = "0.8.2", features = ["v4_12"] }
ijson = "0.1.3"
image = "0.25.2"
indicatif = "0.17.8"
ink-stroke-modeler-rs = { git = "https://github.com/flxzt/ink-stroke-modeler-rs", rev = "84d311e9b0d034dcd955a1f353d37f54b2bda70f" }
itertools = "0.13.0"
kurbo = "0.10.4"
librsvg = "2.58.2"
nalgebra = { version = "0.33.0", features = ["serde-serialize"] }
notify-debouncer-full = "0.3.1"
num-derive = "0.4.2"
num-traits = "0.2.19"
numeric-sort = "0.1.1"
once_cell = "1.19"
open = "5.3"
palette = "0.7.6"
parry2d-f64 = { version = "0.17.0", features = ["serde-serialize"] }
path-absolutize = "3.1"
piet = "0.6.2"
piet-cairo = "0.6.2"
postcard = { version = "1.0", features = ["alloc"] }
rand = "0.8.5"
rand_distr = "0.4.3"
rand_pcg = "0.3.1"
rayon = "1.10"
regex = "1.10"
rodio = { version = "0.19.0", default-features = false, features = [
    "symphonia-wav",
] }
rough_piet = "0.6.0"
roughr = "0.6.0"
roxmltree = "0.20.0"
rstar = "0.12.0"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
slotmap = { version = "1.0", features = ["serde"] }
smol = "2.0"
svg = "0.17.0"
thiserror = "1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
unicode-segmentation = "1.11"
url = "2.5"
usvg = "0.42.0"
winresource = "0.1.17"
xmlwriter = "0.1.0"
# Enabling feature > v20_9 causes linker errors on mingw
poppler-rs = { version = "0.23.0", features = ["v20_9"] }
zstd = { version =  "0.13", features = ["zstdmt"] }

[patch.crates-io]
# once a new piet (current v0.6.2) is released with updated cairo and kurbo deps, this can be removed.
piet = { git = "https://github.com/linebender/piet", rev = "02eb5f0152e893626c43980bf37eeb0ccb1acb46" }
piet-cairo = { git = "https://github.com/linebender/piet", rev = "02eb5f0152e893626c43980bf37eeb0ccb1acb46" }

[profile.dev]
debug = true
opt-level = 2

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
# We want to be able to debug in the release build as well
debug = true
