[workspace]
members = [
    "crates/rnote-compose",
    "crates/rnote-engine",
    "crates/rnote-cli",
    "crates/rnote-ui",
]
resolver = "2"

[workspace.package]
authors = ["The Rnote Authors"]
edition = "2024"
homepage = "https://rnote.flxzt.net"
license = "GPL-3.0-or-later"
repository = "https://github.com/flxzt/rnote"
rust-version = "1.89"
version = "0.13.1"

[workspace.dependencies]
rnote-compose = { version = "0.13.1", path = "crates/rnote-compose" }
rnote-engine = { version = "0.13.1", path = "crates/rnote-engine" }

adw = { version = "0.8.0", package = "libadwaita", features = ["v1_7"] }
anyhow = "1.0"
approx = "0.5.1"
async-fs = "2.1"
base64 = "0.22.1"
cairo-rs = { version = "0.21.1", features = ["v1_18", "png", "svg", "pdf"] }
chrono = "0.4.41"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.12.0"
flate2 = "1.1"
fs_extra = "1.3"
futures = "0.3.31"
geo = "0.30.0"
gettext-rs = { version = "0.7.2", features = ["gettext-system"] }
gio = "0.21.1"
glib = "0.21.1"
glib-build-tools = "0.21.0"
gtk4 = { version = "0.10.0", features = ["v4_18"] }
hayro = { version = "0.4.0", features = ["embed-fonts"] }
hayro-svg = "0.2.0"
ijson = "0.1.4"
image = { version = "0.25.6", default-features = false, features = [
    "rayon",
    "png",
    "bmp",
    "gif",
    "ico",
    "jpeg",
    "png",
    "tiff",
] }
indicatif = "0.18.0"
ink-stroke-modeler-rs = "0.1.0"
itertools = "0.14.0"
kurbo = "0.11.2"
librsvg = "2.60.0"
nalgebra = { version = "0.34.0", features = ["serde-serialize"] }
notify-debouncer-full = "0.6.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
numeric-sort = "0.1.5"
once_cell = "1.21"
open = "5.3"
palette = "0.7.6"
parry2d-f64 = { version = "0.23.0", features = ["serde-serialize"] }
path-absolutize = "3.1"
piet = "0.8.0"
piet-cairo = "0.8.0"
rand = "0.9.1"
rand_distr = "0.5.1"
rand_pcg = "0.9.0"
rayon = "1.10"
regex = "1.11"
rodio = { version = "0.21.1", default-features = false, features = [
    "playback",
    "wav",
] }
rough_piet = "0.13.0"
roughr = "0.12.0"
roxmltree = "0.20.0"
rstar = "0.12.2"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
slotmap = { version = "1.0", features = ["serde"] }
smol = "2.0"
svg = "0.18.0"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
unicode-segmentation = "1.12"
url = "2.5"
usvg = "0.45.1"
winresource = "0.1.20"
xmlwriter = "0.1.0"

# Enabling feature > v20_9 causes linker errors on mingw
poppler-rs = { version = "0.25.0", features = ["v20_9"] }

[patch.crates-io]

[profile.dev]
debug = true
opt-level = 2

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
# We want to be able to debug in the release build as well
debug = true
